# vdrl

./: .gitignore  README.md  pyproject.toml  requirements.txt  temp.py
examples/: minigrid_test.json  run_minigrid_labyrinth.py
experiments/decomposition/: config.json
experiments/formal_vs_empirical/: plot_traces.py
experiments/formal_vs_empirical/runs/run1/: results_data.p
experiments/formal_vs_empirical/runs/run1/controller_0/: controller_data.p
experiments/formal_vs_empirical/runs/run1/controller_1/: controller_data.p
experiments/formal_vs_empirical/runs/run1/controller_10/: controller_data.p
experiments/formal_vs_empirical/runs/run1/controller_11/: controller_data.p
experiments/formal_vs_empirical/runs/run1/controller_2/: controller_data.p
experiments/formal_vs_empirical/runs/run3/: results_data.p
experiments/formal_vs_empirical/runs/run5/: meta_controller_data.p  results_data.p
experiments/pruning/: config.json  run_pruning_experiment.py
experiments/pruning/results/: results.json
experiments/pruning/run/: results_data.p
experiments/pruning/run/controller_0/: controller_data.p
experiments/pruning/run/controller_1/: controller_data.p
experiments/pruning/run/controller_10/: controller_data.p
experiments/pruning/run/controller_11/: controller_data.p
experiments/pruning/run/controller_2/: controller_data.p
experiments/pruning/run/controller_3/: controller_data.p
experiments/pruning/run/controller_4/: controller_data.p
experiments/pruning/run/controller_5/: controller_data.p
experiments/pruning/run/controller_6/: controller_data.p
experiments/pruning/run/controller_7/: controller_data.p
experiments/pruning/run/controller_8/: controller_data.p
experiments/pruning/run/controller_9/: controller_data.p
experiments/pruning/run/meta_environment/: meta_environment.p
src/vdrl/: __init__.py  __main__.py  config.py  exceptions.py
src/vdrl/controller/: __init__.py  controller.py  emperical.py  reach_avoid.py
src/vdrl/environment/: __init__.py  environment.py  minigrid.py
src/vdrl/high_level/: __init__.py  meta_controller.py  meta_environment.py  meta_model.py
src/vdrl/model/: __init__.py  model.py  ppo_model.py  viper_model.py
src/vdrl/utils/: results_saver.py
src/vdrl/viper/: evaluate.py  train.py  utils.py
(+33 files in other folders)
